Add File manager and Category

--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
         "laravel-vite-plugin": "^0.8.0",
         "sass": "^1.56.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^4.4.0",
+        "vue": "^3.2.36",
+        "vue-loader": "^17.2.2",
+        "vue3-google-login": "^2.0.23"
     }
 }
