--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.4.0",
+        "alertify": "^0.3.0",
+        "alertifyjs": "^1.13.1",
+        "notyf": "^3.10.0",
         "vue": "^3.2.36",
         "vue-loader": "^17.2.2",
         "vue3-google-login": "^2.0.23"
