--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@formkit/auto-animate": "^0.8.0",
         "@vitejs/plugin-vue": "^4.4.0",
         "alertify": "^0.3.0",
         "alertifyjs": "^1.13.1",
