--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,14 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
         "binafy/laravel-user-monitoring": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
-        "spatie/laravel-permission": "^5.11"
+        "spatie/laravel-permission": "^5.11",
+        "spatie/pdf-to-image": "^2.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
